[package]

name = "rust_github"
version = "0.0.1"
authors = ["Jared Roesch <roeschinc@gmail.com>"]

[lib]

name = "github"

[dependencies.hyper]

name = "hyper"
git = "https://github.com/kyledewey/hyper"
branch = "working"

[dependencies.url]

name = "url"
git = "https://github.com/servo/rust-url"

